--- a/notifications.html
+++ b/notifications.html
@@ -283,16 +283,19 @@
           </div>
 
           <div class="filter-buttons">
-            <button class="filter-btn active" onclick="filterByStatus('all')">
+            <button
+              class="filter-btn active"
+              onclick="filterByStatus('all', this)"
+            >
               الكل
             </button>
-            <button class="filter-btn" onclick="filterByStatus('today')">
+            <button class="filter-btn" onclick="filterByStatus('today', this)">
               اليوم
             </button>
-            <button class="filter-btn" onclick="filterByStatus('week')">
+            <button class="filter-btn" onclick="filterByStatus('week', this)">
               هذا الأسبوع
             </button>
-            <button class="filter-btn" onclick="filterByStatus('month')">
+            <button class="filter-btn" onclick="filterByStatus('month', this)">
               هذا الشهر
             </button>
           </div>
@@ -354,81 +357,32 @@
       let filteredBookings = [];
       let currentFilter = "all";
 
+      // Load all bookings from your API
       async function loadNotifications() {
         try {
           const res = await fetch("/api/bookings");
           const rawData = await res.json();
-          allBookings = rawData.slice(1).reverse(); // Reverse to show newest first
-          filteredBookings = allBookings;
+          // Skip header row, newest first
+          allBookings = rawData.slice(1).reverse();
+          filteredBookings = [...allBookings];
           renderNotifications();
         } catch (error) {
           console.error("Error loading notifications:", error);
-          // For demo purposes, create some sample data
-          createSampleData();
         }
       }
 
-      function createSampleData() {
-        // Create sample data for testing
-        const now = new Date();
-        const oneDayAgo = new Date(now.getTime() - 24 * 60 * 60 * 1000);
-        const threeDaysAgo = new Date(now.getTime() - 3 * 24 * 60 * 60 * 1000);
-        const tenDaysAgo = new Date(now.getTime() - 10 * 24 * 60 * 60 * 1000);
-        const fortyDaysAgo = new Date(now.getTime() - 40 * 24 * 60 * 60 * 1000);
-
-        allBookings = [
-          {
-            name: "أحمد محمد",
-            phone: "0123456789",
-            service: "فحص دوري",
-            appointment: "2025-01-15",
-            timestamp: now.toISOString(),
-          },
-          {
-            name: "فاطمة علي",
-            phone: "0123456790",
-            service: "تنظيف أسنان",
-            appointment: "2025-01-16",
-            timestamp: oneDayAgo.toISOString(),
-          },
-          {
-            name: "محمد خالد",
-            phone: "0123456791",
-            service: "حشو أسنان",
-            appointment: "2025-01-10",
-            timestamp: threeDaysAgo.toISOString(),
-          },
-          {
-            name: "سارة عبدالله",
-            phone: "0123456792",
-            service: "تقويم",
-            appointment: "2024-12-25",
-            timestamp: tenDaysAgo.toISOString(),
-          },
-          {
-            name: "يوسف أحمد",
-            phone: "0123456793",
-            service: "خلع ضرس",
-            appointment: "2024-11-20",
-            timestamp: fortyDaysAgo.toISOString(),
-          },
-        ];
-
-        filteredBookings = allBookings;
-        renderNotifications();
-      }
-
+      // Render all visible notifications
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
 
-        if (filteredBookings.length === 0) {
+        if (!filteredBookings || filteredBookings.length === 0) {
           container.innerHTML = `
-            <div class="empty-state">
-              <i class="fa-solid fa-bell-slash"></i>
-              <h3>لا توجد إشعارات</h3>
-              <p>لم يتم العثور على أي حجوزات</p>
-            </div>
-          `;
+      <div class="empty-state">
+        <i class="fa-solid fa-bell-slash"></i>
+        <h3>لا توجد إشعارات</h3>
+        <p>لم يتم العثور على أي حجوزات</p>
+      </div>
+    `;
           return;
         }
 
@@ -436,48 +390,54 @@
           .map((booking) => {
             const timeAgo = getTimeAgo(booking.timestamp);
             return `
-            <div class="notification-item">
-              <div class="notification-icon">
-                <i class="fa-solid fa-user-plus"></i>
-              </div>
-              <div class="notification-content">
-                <div class="notification-name">${
-                  booking.name || "غير محدد"
-                }</div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-phone"></i> ${
-                    booking.phone || "غير محدد"
-                  }
-                </div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-stethoscope"></i> ${
-                    booking.service || "غير محدد"
-                  }
-                </div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-calendar"></i> ${
-                    booking.appointment || "غير محدد"
-                  }
-                </div>
-                <div class="notification-time">
-                  <i class="fa-solid fa-clock"></i> ${timeAgo}
-                </div>
-              </div>
-              <div>
-                <span class="notification-badge-small">جديد</span>
-              </div>
-            </div>
-          `;
+      <div class="notification-item">
+        <div class="notification-icon">
+          <i class="fa-solid fa-user-plus"></i>
+        </div>
+        <div class="notification-content">
+          <div class="notification-name">${booking.name || "غير محدد"}</div>
+          <div class="notification-details">
+            <i class="fa-solid fa-phone"></i> ${booking.phone || "غير محدد"}
+          </div>
+          <div class="notification-details">
+            <i class="fa-solid fa-stethoscope"></i> ${
+              booking.service || "غير محدد"
+            }
+          </div>
+          <div class="notification-details">
+            <i class="fa-solid fa-calendar"></i> ${
+              booking.appointment || "غير محدد"
+            }
+          </div>
+          <div class="notification-time">
+            <i class="fa-solid fa-clock"></i> ${timeAgo}
+          </div>
+        </div>
+        <div>
+          <span class="notification-badge-small">جديد</span>
+        </div>
+      </div>
+    `;
           })
           .join("");
       }
 
+      // Helper to parse flexible date formats
+      function parseDateSafe(value) {
+        if (!value) return null;
+        if (value instanceof Date) return value;
+        if (!isNaN(value)) return new Date(Number(value));
+        const d = new Date(value);
+        return isNaN(d.getTime()) ? null : d;
+      }
+
+      // Display time ago in Arabic
       function getTimeAgo(timestamp) {
-        if (!timestamp) return "غير محدد";
+        const date = parseDateSafe(timestamp);
+        if (!date) return "غير محدد";
 
         const now = new Date();
-        const bookingDate = new Date(timestamp);
-        const diffMs = now - bookingDate;
+        const diffMs = now - date;
         const diffMins = Math.floor(diffMs / 60000);
         const diffHours = Math.floor(diffMs / 3600000);
         const diffDays = Math.floor(diffMs / 86400000);
@@ -487,82 +447,96 @@
         if (diffHours < 24) return `منذ ${diffHours} ساعة`;
         if (diffDays < 7) return `منذ ${diffDays} يوم`;
 
-        return bookingDate.toLocaleDateString("ar-EG");
+        return new Intl.DateTimeFormat("ar-EG", {
+          year: "numeric",
+          month: "2-digit",
+          day: "2-digit",
+        }).format(date);
       }
 
-      function filterByStatus(status) {
+      // Filter by time range (today / week / month)
+      function filterByStatus(status, btn = null) {
         currentFilter = status;
 
-        // Update active button
-        document.querySelectorAll(".filter-btn").forEach((btn) => {
-          btn.classList.remove("active");
-        });
-        event.target.classList.add("active");
+        // Update button UI if present
+        document
+          .querySelectorAll(".filter-btn")
+          .forEach((b) => b.classList.remove("active"));
+        if (btn) btn.classList.add("active");
 
         const now = new Date();
-        const today = new Date(
+        const startOfToday = new Date(
           now.getFullYear(),
           now.getMonth(),
           now.getDate()
         );
-        const weekAgo = new Date(today.getTime() - 7 * 24 * 60 * 60 * 1000);
-        const monthAgo = new Date(today.getTime() - 30 * 24 * 60 * 60 * 1000);
+        const sevenDaysAgo = new Date(now.getTime() - 7 * 24 * 60 * 60 * 1000);
+        const thirtyDaysAgo = new Date(
+          now.getTime() - 30 * 24 * 60 * 60 * 1000
+        );
 
         if (status === "all") {
-          filteredBookings = allBookings;
-        } else if (status === "today") {
+          filteredBookings = [...allBookings];
+        } else {
           filteredBookings = allBookings.filter((b) => {
-            if (!b.timestamp) return false;
-            const bookingDate = new Date(b.timestamp);
-            // Set both dates to midnight for accurate day comparison
-            const bookingDay = new Date(
-              bookingDate.getFullYear(),
-              bookingDate.getMonth(),
-              bookingDate.getDate()
-            );
-            const todayMidnight = new Date(
-              now.getFullYear(),
-              now.getMonth(),
-              now.getDate()
-            );
-            return bookingDay.getTime() === todayMidnight.getTime();
-          });
-        } else if (status === "week") {
-          filteredBookings = allBookings.filter((b) => {
-            if (!b.timestamp) return false;
-            const bookingDate = new Date(b.timestamp);
-            return bookingDate >= weekAgo;
-          });
-        } else if (status === "month") {
-          filteredBookings = allBookings.filter((b) => {
-            if (!b.timestamp) return false;
-            const bookingDate = new Date(b.timestamp);
-            return bookingDate >= monthAgo;
+            const d = parseDateSafe(b.timestamp);
+            if (!d) return false;
+            if (status === "today") return d >= startOfToday;
+            if (status === "week") return d >= sevenDaysAgo;
+            if (status === "month") return d >= thirtyDaysAgo;
+            return true;
           });
         }
 
         renderNotifications();
       }
 
+      // Search filter
       function filterNotifications() {
         const searchTerm = document
           .getElementById("searchInput")
-          .value.toLowerCase();
+          .value.toLowerCase()
+          .trim();
 
-        if (searchTerm === "") {
-          filterByStatus(currentFilter);
-          return;
+        let base = allBookings;
+
+        // First apply current date filter
+        if (currentFilter !== "all") {
+          const now = new Date();
+          const startOfToday = new Date(
+            now.getFullYear(),
+            now.getMonth(),
+            now.getDate()
+          );
+          const sevenDaysAgo = new Date(
+            now.getTime() - 7 * 24 * 60 * 60 * 1000
+          );
+          const thirtyDaysAgo = new Date(
+            now.getTime() - 30 * 24 * 60 * 60 * 1000
+          );
+
+          base = base.filter((b) => {
+            const d = parseDateSafe(b.timestamp);
+            if (!d) return false;
+            if (currentFilter === "today") return d >= startOfToday;
+            if (currentFilter === "week") return d >= sevenDaysAgo;
+            if (currentFilter === "month") return d >= thirtyDaysAgo;
+            return true;
+          });
         }
 
-        filteredBookings = allBookings.filter((booking) => {
-          return (
-            (booking.name && booking.name.toLowerCase().includes(searchTerm)) ||
-            (booking.service &&
-              booking.service.toLowerCase().includes(searchTerm)) ||
-            (booking.phone && booking.phone.includes(searchTerm))
-          );
-        });
+        // Then search within results
+        if (searchTerm) {
+          base = base.filter((b) => {
+            return (
+              (b.name && b.name.toLowerCase().includes(searchTerm)) ||
+              (b.service && b.service.toLowerCase().includes(searchTerm)) ||
+              (b.phone && b.phone.includes(searchTerm))
+            );
+          });
+        }
 
+        filteredBookings = base;
         renderNotifications();
       }
 
