--- a/notifications.html
+++ b/notifications.html
@@ -283,19 +283,16 @@
           </div>
 
           <div class="filter-buttons">
-            <button
-              class="filter-btn active"
-              onclick="filterByStatus('all', this)"
-            >
+            <button class="filter-btn active" onclick="filterByStatus('all')">
               الكل
             </button>
-            <button class="filter-btn" onclick="filterByStatus('today', this)">
+            <button class="filter-btn" onclick="filterByStatus('today')">
               اليوم
             </button>
-            <button class="filter-btn" onclick="filterByStatus('week', this)">
+            <button class="filter-btn" onclick="filterByStatus('week')">
               هذا الأسبوع
             </button>
-            <button class="filter-btn" onclick="filterByStatus('month', this)">
+            <button class="filter-btn" onclick="filterByStatus('month')">
               هذا الشهر
             </button>
           </div>
@@ -357,32 +354,29 @@
       let filteredBookings = [];
       let currentFilter = "all";
 
-      // Load all bookings from your API
       async function loadNotifications() {
         try {
           const res = await fetch("/api/bookings");
           const rawData = await res.json();
-          // Skip header row, newest first
-          allBookings = rawData.slice(1).reverse();
-          filteredBookings = [...allBookings];
+          allBookings = rawData.slice(1).reverse(); // Reverse to show newest first
+          filteredBookings = allBookings;
           renderNotifications();
         } catch (error) {
           console.error("Error loading notifications:", error);
         }
       }
 
-      // Render all visible notifications
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
 
-        if (!filteredBookings || filteredBookings.length === 0) {
+        if (filteredBookings.length === 0) {
           container.innerHTML = `
-      <div class="empty-state">
-        <i class="fa-solid fa-bell-slash"></i>
-        <h3>لا توجد إشعارات</h3>
-        <p>لم يتم العثور على أي حجوزات</p>
-      </div>
-    `;
+            <div class="empty-state">
+              <i class="fa-solid fa-bell-slash"></i>
+              <h3>لا توجد إشعارات</h3>
+              <p>لم يتم العثور على أي حجوزات</p>
+            </div>
+          `;
           return;
         }
 
@@ -390,54 +384,48 @@
           .map((booking) => {
             const timeAgo = getTimeAgo(booking.timestamp);
             return `
-      <div class="notification-item">
-        <div class="notification-icon">
-          <i class="fa-solid fa-user-plus"></i>
-        </div>
-        <div class="notification-content">
-          <div class="notification-name">${booking.name || "غير محدد"}</div>
-          <div class="notification-details">
-            <i class="fa-solid fa-phone"></i> ${booking.phone || "غير محدد"}
-          </div>
-          <div class="notification-details">
-            <i class="fa-solid fa-stethoscope"></i> ${
-              booking.service || "غير محدد"
-            }
-          </div>
-          <div class="notification-details">
-            <i class="fa-solid fa-calendar"></i> ${
-              booking.appointment || "غير محدد"
-            }
-          </div>
-          <div class="notification-time">
-            <i class="fa-solid fa-clock"></i> ${timeAgo}
-          </div>
-        </div>
-        <div>
-          <span class="notification-badge-small">جديد</span>
-        </div>
-      </div>
-    `;
+            <div class="notification-item">
+              <div class="notification-icon">
+                <i class="fa-solid fa-user-plus"></i>
+              </div>
+              <div class="notification-content">
+                <div class="notification-name">${
+                  booking.name || "غير محدد"
+                }</div>
+                <div class="notification-details">
+                  <i class="fa-solid fa-phone"></i> ${
+                    booking.phone || "غير محدد"
+                  }
+                </div>
+                <div class="notification-details">
+                  <i class="fa-solid fa-stethoscope"></i> ${
+                    booking.service || "غير محدد"
+                  }
+                </div>
+                <div class="notification-details">
+                  <i class="fa-solid fa-calendar"></i> ${
+                    booking.appointment || "غير محدد"
+                  }
+                </div>
+                <div class="notification-time">
+                  <i class="fa-solid fa-clock"></i> ${timeAgo}
+                </div>
+              </div>
+              <div>
+                <span class="notification-badge-small">جديد</span>
+              </div>
+            </div>
+          `;
           })
           .join("");
       }
 
-      // Helper to parse flexible date formats
-      function parseDateSafe(value) {
-        if (!value) return null;
-        if (value instanceof Date) return value;
-        if (!isNaN(value)) return new Date(Number(value));
-        const d = new Date(value);
-        return isNaN(d.getTime()) ? null : d;
-      }
-
-      // Display time ago in Arabic
       function getTimeAgo(timestamp) {
-        const date = parseDateSafe(timestamp);
-        if (!date) return "غير محدد";
+        if (!timestamp) return "غير محدد";
 
         const now = new Date();
-        const diffMs = now - date;
+        const bookingDate = new Date(timestamp);
+        const diffMs = now - bookingDate;
         const diffMins = Math.floor(diffMs / 60000);
         const diffHours = Math.floor(diffMs / 3600000);
         const diffDays = Math.floor(diffMs / 86400000);
@@ -447,96 +435,120 @@
         if (diffHours < 24) return `منذ ${diffHours} ساعة`;
         if (diffDays < 7) return `منذ ${diffDays} يوم`;
 
-        return new Intl.DateTimeFormat("ar-EG", {
-          year: "numeric",
-          month: "2-digit",
-          day: "2-digit",
-        }).format(date);
+        return bookingDate.toLocaleDateString("ar-EG");
       }
 
-      // Filter by time range (today / week / month)
-      function filterByStatus(status, btn = null) {
+      // Parse appointment date string to Date object
+      function parseAppointmentDate(appointmentStr) {
+        if (!appointmentStr) return null;
+
+        // Handle formats like "2025-01-15" or "15/01/2025" or "January 15, 2025"
+        try {
+          // Try ISO format first
+          let date = new Date(appointmentStr);
+          if (!isNaN(date.getTime())) return date;
+
+          // Try parsing common formats
+          const parts = appointmentStr.split(/[-/\s,]+/);
+          if (parts.length >= 3) {
+            // Try different orders
+            const formats = [
+              [parts[0], parts[1], parts[2]], // Year-Month-Day
+              [parts[2], parts[1], parts[0]], // Day-Month-Year
+              [parts[2], parts[0], parts[1]], // Year-Day-Month
+            ];
+
+            for (let format of formats) {
+              date = new Date(format[0], format[1] - 1, format[2]);
+              if (!isNaN(date.getTime())) return date;
+            }
+          }
+        } catch (e) {
+          console.error("Error parsing date:", appointmentStr, e);
+        }
+
+        return null;
+      }
+
+      function filterByStatus(status) {
         currentFilter = status;
 
-        // Update button UI if present
-        document
-          .querySelectorAll(".filter-btn")
-          .forEach((b) => b.classList.remove("active"));
-        if (btn) btn.classList.add("active");
+        // Update active button
+        document.querySelectorAll(".filter-btn").forEach((btn) => {
+          btn.classList.remove("active");
+        });
+        event.target.classList.add("active");
 
         const now = new Date();
-        const startOfToday = new Date(
+        const today = new Date(
           now.getFullYear(),
           now.getMonth(),
           now.getDate()
         );
-        const sevenDaysAgo = new Date(now.getTime() - 7 * 24 * 60 * 60 * 1000);
-        const thirtyDaysAgo = new Date(
-          now.getTime() - 30 * 24 * 60 * 60 * 1000
-        );
+        const tomorrow = new Date(today);
+        tomorrow.setDate(tomorrow.getDate() + 1);
+
+        const weekFromNow = new Date(today);
+        weekFromNow.setDate(weekFromNow.getDate() + 7);
+
+        const monthFromNow = new Date(today);
+        monthFromNow.setMonth(monthFromNow.getMonth() + 1);
 
         if (status === "all") {
-          filteredBookings = [...allBookings];
-        } else {
+          filteredBookings = allBookings;
+        } else if (status === "today") {
           filteredBookings = allBookings.filter((b) => {
-            const d = parseDateSafe(b.timestamp);
-            if (!d) return false;
-            if (status === "today") return d >= startOfToday;
-            if (status === "week") return d >= sevenDaysAgo;
-            if (status === "month") return d >= thirtyDaysAgo;
-            return true;
+            const appointmentDate = parseAppointmentDate(b.appointment);
+            if (!appointmentDate) return false;
+            return appointmentDate >= today && appointmentDate < tomorrow;
+          });
+        } else if (status === "week") {
+          filteredBookings = allBookings.filter((b) => {
+            const appointmentDate = parseAppointmentDate(b.appointment);
+            if (!appointmentDate) return false;
+            return appointmentDate >= today && appointmentDate <= weekFromNow;
+          });
+        } else if (status === "month") {
+          filteredBookings = allBookings.filter((b) => {
+            const appointmentDate = parseAppointmentDate(b.appointment);
+            if (!appointmentDate) return false;
+            return appointmentDate >= today && appointmentDate <= monthFromNow;
           });
         }
 
         renderNotifications();
       }
 
-      // Search filter
       function filterNotifications() {
         const searchTerm = document
           .getElementById("searchInput")
-          .value.toLowerCase()
-          .trim();
+          .value.toLowerCase();
 
-        let base = allBookings;
-
-        // First apply current date filter
-        if (currentFilter !== "all") {
-          const now = new Date();
-          const startOfToday = new Date(
-            now.getFullYear(),
-            now.getMonth(),
-            now.getDate()
-          );
-          const sevenDaysAgo = new Date(
-            now.getTime() - 7 * 24 * 60 * 60 * 1000
-          );
-          const thirtyDaysAgo = new Date(
-            now.getTime() - 30 * 24 * 60 * 60 * 1000
-          );
-
-          base = base.filter((b) => {
-            const d = parseDateSafe(b.timestamp);
-            if (!d) return false;
-            if (currentFilter === "today") return d >= startOfToday;
-            if (currentFilter === "week") return d >= sevenDaysAgo;
-            if (currentFilter === "month") return d >= thirtyDaysAgo;
-            return true;
-          });
+        if (searchTerm === "") {
+          // Re-apply current time filter
+          const dummyEvent = {
+            target: document.querySelector(".filter-btn.active"),
+          };
+          const originalEvent = window.event;
+          window.event = dummyEvent;
+          filterByStatus(currentFilter);
+          window.event = originalEvent;
+          return;
         }
 
-        // Then search within results
-        if (searchTerm) {
-          base = base.filter((b) => {
-            return (
-              (b.name && b.name.toLowerCase().includes(searchTerm)) ||
-              (b.service && b.service.toLowerCase().includes(searchTerm)) ||
-              (b.phone && b.phone.includes(searchTerm))
-            );
-          });
-        }
+        // Apply search on top of current filter
+        const baseBookings =
+          currentFilter === "all" ? allBookings : filteredBookings;
 
-        filteredBookings = base;
+        filteredBookings = baseBookings.filter((booking) => {
+          return (
+            (booking.name && booking.name.toLowerCase().includes(searchTerm)) ||
+            (booking.service &&
+              booking.service.toLowerCase().includes(searchTerm)) ||
+            (booking.phone && booking.phone.includes(searchTerm))
+          );
+        });
+
         renderNotifications();
       }
 
