--- a/notifications.html
+++ b/notifications.html
@@ -354,78 +354,138 @@
       let filteredBookings = [];
       let currentFilter = "all";
 
+      // robust date parser (ISO, "MM/DD/YYYY HH:mm", or numeric serial/ms)
+      function parseDateSafe(value) {
+        if (!value && value !== 0) return null;
+
+        // already a Date
+        if (value instanceof Date) return isNaN(value) ? null : value;
+
+        // numeric? could be Excel serial or epoch ms
+        if (!isNaN(value)) {
+          const num = Number(value);
+          // heuristic: Excel serials are ~ > 20k and < 100k; epoch ms are > 1e9
+          // try epoch ms first; if too small, treat as Excel serial (days since 1899-12-30)
+          if (num > 1e9) {
+            const dMs = new Date(num);
+            return isNaN(dMs) ? null : dMs;
+          }
+          // Excel serial -> JS date
+          const excelEpoch = new Date(Date.UTC(1899, 11, 30)); // 1899-12-30
+          const dExcel = new Date(excelEpoch.getTime() + num * 86400000);
+          return isNaN(dExcel) ? null : dExcel;
+        }
+
+        // string
+        const d = new Date(value);
+        return isNaN(d) ? null : d;
+      }
+
+      function startOfToday() {
+        const now = new Date();
+        return new Date(now.getFullYear(), now.getMonth(), now.getDate());
+      }
+      function daysAgo(n) {
+        const now = new Date();
+        return new Date(now.getTime() - n * 24 * 60 * 60 * 1000);
+      }
+
+      // tiny helper to set the active button WITHOUT needing event.target
+      function setActiveButton(status) {
+        const btns = document.querySelectorAll(".filter-btn");
+        const index =
+          status === "all"
+            ? 0
+            : status === "today"
+            ? 1
+            : status === "week"
+            ? 2
+            : status === "month"
+            ? 3
+            : -1;
+
+        btns.forEach((b, i) => b.classList.toggle("active", i === index));
+      }
+
+      // load data
       async function loadNotifications() {
         try {
           const res = await fetch("/api/bookings");
           const rawData = await res.json();
-          allBookings = rawData.slice(1).reverse(); // Reverse to show newest first
-          filteredBookings = allBookings;
+
+          // skip header row if present, newest first
+          const rows = rawData.slice(1).reverse();
+
+          // normalize timestamps once
+          allBookings = rows.map((r) => ({
+            ...r,
+            _ts: parseDateSafe(r.timestamp), // add parsed date
+          }));
+
+          // default view = all
+          filteredBookings = [...allBookings];
           renderNotifications();
         } catch (error) {
           console.error("Error loading notifications:", error);
         }
       }
 
+      // render UI
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
 
-        if (filteredBookings.length === 0) {
+        if (!filteredBookings || filteredBookings.length === 0) {
           container.innerHTML = `
-            <div class="empty-state">
-              <i class="fa-solid fa-bell-slash"></i>
-              <h3>لا توجد إشعارات</h3>
-              <p>لم يتم العثور على أي حجوزات</p>
-            </div>
-          `;
+      <div class="empty-state">
+        <i class="fa-solid fa-bell-slash"></i>
+        <h3>لا توجد إشعارات</h3>
+        <p>لم يتم العثور على أي حجوزات</p>
+      </div>
+    `;
           return;
         }
 
         container.innerHTML = filteredBookings
           .map((booking) => {
-            const timeAgo = getTimeAgo(booking.timestamp);
+            const timeAgo = getTimeAgo(booking._ts);
             return `
-            <div class="notification-item">
-              <div class="notification-icon">
-                <i class="fa-solid fa-user-plus"></i>
-              </div>
-              <div class="notification-content">
-                <div class="notification-name">${
-                  booking.name || "غير محدد"
-                }</div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-phone"></i> ${
-                    booking.phone || "غير محدد"
-                  }
-                </div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-stethoscope"></i> ${
-                    booking.service || "غير محدد"
-                  }
-                </div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-calendar"></i> ${
-                    booking.appointment || "غير محدد"
-                  }
-                </div>
-                <div class="notification-time">
-                  <i class="fa-solid fa-clock"></i> ${timeAgo}
-                </div>
-              </div>
-              <div>
-                <span class="notification-badge-small">جديد</span>
-              </div>
+        <div class="notification-item">
+          <div class="notification-icon">
+            <i class="fa-solid fa-user-plus"></i>
+          </div>
+          <div class="notification-content">
+            <div class="notification-name">${booking.name || "غير محدد"}</div>
+            <div class="notification-details">
+              <i class="fa-solid fa-phone"></i> ${booking.phone || "غير محدد"}
             </div>
-          `;
+            <div class="notification-details">
+              <i class="fa-solid fa-stethoscope"></i> ${
+                booking.service || "غير محدد"
+              }
+            </div>
+            <div class="notification-details">
+              <i class="fa-solid fa-calendar"></i> ${
+                booking.appointment || "غير محدد"
+              }
+            </div>
+            <div class="notification-time">
+              <i class="fa-solid fa-clock"></i> ${timeAgo}
+            </div>
+          </div>
+          <div>
+            <span class="notification-badge-small">جديد</span>
+          </div>
+        </div>
+      `;
           })
           .join("");
       }
 
-      function getTimeAgo(timestamp) {
-        if (!timestamp) return "غير محدد";
-
+      // time-ago in AR
+      function getTimeAgo(dateObj) {
+        if (!(dateObj instanceof Date) || isNaN(dateObj)) return "غير محدد";
         const now = new Date();
-        const bookingDate = new Date(timestamp);
-        const diffMs = now - bookingDate;
+        const diffMs = now - dateObj;
         const diffMins = Math.floor(diffMs / 60000);
         const diffHours = Math.floor(diffMs / 3600000);
         const diffDays = Math.floor(diffMs / 86400000);
@@ -435,120 +495,109 @@
         if (diffHours < 24) return `منذ ${diffHours} ساعة`;
         if (diffDays < 7) return `منذ ${diffDays} يوم`;
 
-        return bookingDate.toLocaleDateString("ar-EG");
-      }
-
-      // Parse appointment date string to Date object
-      function parseAppointmentDate(appointmentStr) {
-        if (!appointmentStr) return null;
-
-        // Handle formats like "2025-01-15" or "15/01/2025" or "January 15, 2025"
         try {
-          // Try ISO format first
-          let date = new Date(appointmentStr);
-          if (!isNaN(date.getTime())) return date;
-
-          // Try parsing common formats
-          const parts = appointmentStr.split(/[-/\s,]+/);
-          if (parts.length >= 3) {
-            // Try different orders
-            const formats = [
-              [parts[0], parts[1], parts[2]], // Year-Month-Day
-              [parts[2], parts[1], parts[0]], // Day-Month-Year
-              [parts[2], parts[0], parts[1]], // Year-Day-Month
-            ];
-
-            for (let format of formats) {
-              date = new Date(format[0], format[1] - 1, format[2]);
-              if (!isNaN(date.getTime())) return date;
-            }
-          }
-        } catch (e) {
-          console.error("Error parsing date:", appointmentStr, e);
+          return new Intl.DateTimeFormat("ar-EG", {
+            year: "numeric",
+            month: "2-digit",
+            day: "2-digit",
+            hour: "2-digit",
+            minute: "2-digit",
+          }).format(dateObj);
+        } catch {
+          return dateObj.toLocaleString("ar-EG");
         }
-
-        return null;
       }
 
+      // main filter (called by your inline onclick="filterByStatus('today')" etc.)
       function filterByStatus(status) {
         currentFilter = status;
+        setActiveButton(status); // updates active class safely
 
-        // Update active button
-        document.querySelectorAll(".filter-btn").forEach((btn) => {
-          btn.classList.remove("active");
-        });
-        event.target.classList.add("active");
+        // base set
+        let base = [...allBookings];
 
-        const now = new Date();
-        const today = new Date(
-          now.getFullYear(),
-          now.getMonth(),
-          now.getDate()
-        );
-        const tomorrow = new Date(today);
-        tomorrow.setDate(tomorrow.getDate() + 1);
+        // apply date range if not 'all'
+        if (status !== "all") {
+          const sToday = startOfToday();
+          const sevenDays = daysAgo(7);
+          const thirtyDays = daysAgo(30);
 
-        const weekFromNow = new Date(today);
-        weekFromNow.setDate(weekFromNow.getDate() + 7);
-
-        const monthFromNow = new Date(today);
-        monthFromNow.setMonth(monthFromNow.getMonth() + 1);
-
-        if (status === "all") {
-          filteredBookings = allBookings;
-        } else if (status === "today") {
-          filteredBookings = allBookings.filter((b) => {
-            const appointmentDate = parseAppointmentDate(b.appointment);
-            if (!appointmentDate) return false;
-            return appointmentDate >= today && appointmentDate < tomorrow;
-          });
-        } else if (status === "week") {
-          filteredBookings = allBookings.filter((b) => {
-            const appointmentDate = parseAppointmentDate(b.appointment);
-            if (!appointmentDate) return false;
-            return appointmentDate >= today && appointmentDate <= weekFromNow;
-          });
-        } else if (status === "month") {
-          filteredBookings = allBookings.filter((b) => {
-            const appointmentDate = parseAppointmentDate(b.appointment);
-            if (!appointmentDate) return false;
-            return appointmentDate >= today && appointmentDate <= monthFromNow;
+          base = base.filter((b) => {
+            const d = b._ts;
+            if (!(d instanceof Date) || isNaN(d)) return false; // exclude invalid dates for ranged filters
+            if (status === "today") return d >= sToday;
+            if (status === "week") return d >= sevenDays;
+            if (status === "month") return d >= thirtyDays;
+            return true;
           });
         }
 
+        // keep newest first by timestamp when available
+        base.sort((a, b) => {
+          const at =
+            a._ts instanceof Date && !isNaN(a._ts)
+              ? a._ts.getTime()
+              : -Infinity;
+          const bt =
+            b._ts instanceof Date && !isNaN(b._ts)
+              ? b._ts.getTime()
+              : -Infinity;
+          return bt - at;
+        });
+
+        filteredBookings = base;
         renderNotifications();
       }
 
+      // search that respects the current date filter
       function filterNotifications() {
-        const searchTerm = document
-          .getElementById("searchInput")
-          .value.toLowerCase();
+        const q = (document.getElementById("searchInput").value || "")
+          .toLowerCase()
+          .trim();
 
-        if (searchTerm === "") {
-          // Re-apply current time filter
-          const dummyEvent = {
-            target: document.querySelector(".filter-btn.active"),
-          };
-          const originalEvent = window.event;
-          window.event = dummyEvent;
-          filterByStatus(currentFilter);
-          window.event = originalEvent;
-          return;
+        // start from the currently filtered-by-date set
+        let base;
+        if (currentFilter === "all") {
+          base = [...allBookings];
+        } else {
+          // reuse same date logic to build the base
+          const sToday = startOfToday();
+          const sevenDays = daysAgo(7);
+          const thirtyDays = daysAgo(30);
+
+          base = allBookings.filter((b) => {
+            const d = b._ts;
+            if (!(d instanceof Date) || isNaN(d)) return false;
+            if (currentFilter === "today") return d >= sToday;
+            if (currentFilter === "week") return d >= sevenDays;
+            if (currentFilter === "month") return d >= thirtyDays;
+            return true;
+          });
         }
 
-        // Apply search on top of current filter
-        const baseBookings =
-          currentFilter === "all" ? allBookings : filteredBookings;
+        if (q) {
+          base = base.filter((b) => {
+            const name = (b.name || "").toLowerCase();
+            const service = (b.service || "").toLowerCase();
+            const phone = b.phone || "";
+            return name.includes(q) || service.includes(q) || phone.includes(q);
+          });
+        }
 
-        filteredBookings = baseBookings.filter((booking) => {
-          return (
-            (booking.name && booking.name.toLowerCase().includes(searchTerm)) ||
-            (booking.service &&
-              booking.service.toLowerCase().includes(searchTerm)) ||
-            (booking.phone && booking.phone.includes(searchTerm))
-          );
+        // sort newest first
+        base.sort((a, b) => {
+          const at =
+            a._ts instanceof Date && !isNaN(a._ts)
+              ? a._ts.getTime()
+              : -Infinity;
+          const bt =
+            b._ts instanceof Date && !isNaN(b._ts)
+              ? b._ts.getTime()
+              : -Infinity;
+          return bt - at;
         });
 
+        filteredBookings = base;
         renderNotifications();
       }
 
